--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -3,16 +3,16 @@
   <package id="Caliburn.Micro" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="ComposableAsync.Core" version="1.1.0" targetFramework="net461" />
-  <package id="DiscogsClient" version="2.5.1" targetFramework="net461" />
-  <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net461" />
+  <package id="DiscogsClient" version="2.6.0" targetFramework="net461" />
+  <package id="Extended.Wpf.Toolkit" version="3.6.0" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.1.999-prerelease" targetFramework="net461" />
   <package id="Inflatable.Lastfm.SQLite" version="1.1.999-prerelease" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3-beta1" targetFramework="net461" />
-  <package id="Octokit" version="0.34.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3-beta2" targetFramework="net461" />
+  <package id="Octokit" version="0.36.0" targetFramework="net461" />
   <package id="RateLimiter" version="2.1.0" targetFramework="net461" />
   <package id="RestSharp" version="106.6.10" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
@@ -26,8 +26,8 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.11" targetFramework="net461" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.11" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
-  <package id="System.Reactive" version="4.2.0-preview.625" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-rc1.19456.4" targetFramework="net461" />
+  <package id="System.Reactive" version="4.2.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0-preview1.19504.10" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
