--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -6,8 +6,8 @@
   <package id="ComposableAsync.Core" version="1.1.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.6.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.1.999-prerelease" targetFramework="net461" />
-  <package id="Moq" version="4.13.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3-beta2" targetFramework="net461" />
+  <package id="Moq" version="4.13.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnitLite" version="3.12.0" targetFramework="net461" />
   <package id="Octokit" version="0.36.0" targetFramework="net461" />
@@ -16,12 +16,12 @@
   <package id="RestSharp" version="106.6.10" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0-preview1.19504.10" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0-preview3.19551.4" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net461" />
   <package id="System.Reactive" version="4.2.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0-preview1.19504.10" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0-preview3.19551.4" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
