Revert Restsharp update

--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -13,7 +13,7 @@
   <package id="Octokit" version="0.36.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.922" targetFramework="net461" />
   <package id="RateLimiter" version="2.1.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.10.2-alpha.0.8" targetFramework="net461" />
+  <package id="RestSharp" version="106.3.0" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net461" />
