--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -17,7 +17,7 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Octokit" version="0.36.0" targetFramework="net461" />
   <package id="RateLimiter" version="2.1.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.10.2-alpha.0.8" targetFramework="net461" />
+  <package id="RestSharp" version="106.3.0" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.19.0" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net461" />
