Update some nuget packages

--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -8,15 +8,15 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.1.999-prerelease" targetFramework="net461" />
   <package id="Inflatable.Lastfm.SQLite" version="1.1.999-prerelease" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.8" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.8" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.0.0-beta3.final" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.0.0-beta3.final" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0-beta3.final" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="Microsoft.NetCore.Analyzers" version="2.9.8" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.NetFramework.Analyzers" version="2.9.8" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="3.0.0-beta3.final" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="3.0.0-beta3.final" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
-  <package id="Octokit" version="0.43.0" targetFramework="net461" />
+  <package id="Octokit" version="0.46.0" targetFramework="net461" />
   <package id="RateLimiter" version="2.1.0" targetFramework="net461" />
   <package id="RestSharp" version="106.3.0" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
@@ -30,8 +30,8 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.11" targetFramework="net461" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.11" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
-  <package id="System.Reactive" version="4.3.2" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net461" />
+  <package id="System.Reactive" version="4.4.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.2.20160.6" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
