Update nuget packages

--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -8,13 +8,13 @@
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm.SQLite" version="1.1.999-prerelease" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.0.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.3.0-beta2.final" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.3.0-beta2.final" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="3.3.0-beta2.final" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="Microsoft.NetCore.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.NETCore.Platforms" version="5.0.0-preview.6.20305.6" targetFramework="net461" />
-  <package id="Microsoft.NetFramework.Analyzers" version="3.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="3.3.0-beta2.final" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0-preview.7.20364.11" targetFramework="net461" />
+  <package id="Microsoft.NetFramework.Analyzers" version="3.3.0-beta2.final" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
@@ -58,7 +58,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.6.20305.6" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-preview.7.20364.11" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
