--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -4,6 +4,7 @@
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="ComposableAsync.Core" version="1.1.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.6.0" targetFramework="net461" />
+  <package id="DiscordRichPresence" version="1.0.150" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
