Add option to turn discord rich presence off

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -58,6 +58,9 @@
       <setting name="CSVHasFieldsInQuotes" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="UseRichPresenceITunes" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
