--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -14,7 +14,7 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="3.3.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Microsoft.NetCore.Analyzers" version="3.3.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.NETCore.Platforms" version="5.0.0-rc.1.20451.14" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0-rc.2.20475.5" targetFramework="net461" />
   <package id="Microsoft.NetFramework.Analyzers" version="3.3.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
@@ -22,7 +22,7 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Octokit" version="0.48.0" targetFramework="net461" />
   <package id="RateLimiter" version="2.1.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.11.5-alpha.0.21" targetFramework="net461" />
+  <package id="RestSharp" version="106.11.8-alpha.0.4" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.19.0" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net461" />
@@ -53,17 +53,18 @@
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reactive" version="4.4.1" targetFramework="net461" />
+  <package id="System.Reactive" version="5.0.0-preview.220" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-rc.1.20451.14" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-rc.2.20475.5" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
